@@ -2,9 +2,7 @@ package ru.job4j.cache;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.nio.file.Path;
 
 public class DirFileCache extends AbstractCache<String, String> {
 
@@ -17,8 +15,8 @@ public class DirFileCache extends AbstractCache<String, String> {
     @Override
     protected String load(String key) {
         String string = "";
-        try (Stream<String> in = Files.lines(Paths.get(cachingDir.concat(key)))) {
-            string = in.collect(Collectors.joining(", "));
+        try {
+            string = Files.readString(Path.of(cachingDir, key));
         } catch (IOException ioe) {
             ioe.printStackTrace();
         }
